Auto stash before merge of "develop" and "origin/develop"

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,29 @@
+asgiref==3.8.1
+beautifulsoup4==4.13.3
+black==25.1.0
+cfgv==3.4.0
+click==8.1.8
+distlib==0.3.9
+Django==4.2.20
+django-bootstrap4==25.1
+filelock==3.18.0
+identify==2.6.9
+mypy-extensions==1.0.0
+nodeenv==1.9.1
+numpy==2.0.2
+packaging==24.2
+pandas==2.2.3
+pathspec==0.12.1
+pillow==11.1.0
+platformdirs==4.3.6
 pre-commit==3.5.0
-Django==5.1.7
-Pillow
-black===25.1.0
-django-bootstrap4==22.2
+python-dateutil==2.9.0.post0
+pytz==2025.2
+PyYAML==6.0.2
+six==1.17.0
+soupsieve==2.6
+sqlparse==0.5.3
+tomli==2.2.1
+typing_extensions==4.12.2
+tzdata==2025.2
+virtualenv==20.29.3
