--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ distlib==0.3.9
 Django==4.2.20
 django-bootstrap4==25.1
 django-environ==0.12.0
+djangorestframework==3.16.0
 filelock==3.18.0
 identify==2.6.9
 mypy-extensions==1.0.0
