modify command to properly save administrative_unit while uploading subprojects from excel file + add command to update admin_unit for subprojects already saved

--- a/.gitignore
+++ b/.gitignore
@@ -72,3 +72,12 @@ targ
 .elasticbeanstalk/*
 !.elasticbeanstalk/*.cfg.yml
 !.elasticbeanstalk/*.global.yml
+
+# Environments
+.env
+.venv
+env/
+venv/
+ENV/
+env.bak/
+venv.bak/
